strategies/ab-testing/app-svc-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-v1
  labels:
    app: myapp
    strategy: ab-testing
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: http-metrics
    port: 9101
    targetPort: 9101
  selector:
    app: myapp
    version: v1.0.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-v1
  labels:
    app: myapp
spec:
  replicas: 10
  selector:
    matchLabels:
      app: myapp
      version: v1.0.0
  template:
    metadata:
      labels:
        app: myapp
        version: v1.0.0
    spec:
      containers:
      - name: myapp
        image: eagle.example.com:5000/strategies:final
        ports:
        - name: http
          containerPort: 8080
        - name: probe
          containerPort: 8086
        - name: http-metrics
          containerPort: 9101
        livenessProbe:
          httpGet:
            path: /live
            port: probe
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /ready
            port: probe
          periodSeconds: 5
