strategies/ab-testing/virtualservice-header.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp
  labels:
    app: myapp
spec:
  hosts:
    - "*"
  gateways:
    - myapp
  http:
    - route:
        - destination:
            host: myapp-v1
      match:
        - headers:
            x-api-version:
              exact: v1.0.0
    - route:
        - destination:
            host: myapp-v2
      match:
        - headers:
            x-api-version:
              exact: v2.0.0
