strategies/ab-testing/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp
  labels:
    app: myapp
spec:
  hosts:
    - "*"
  gateways:
    - myapp
  http:
    - route:
        - destination:
            host: myapp-v1
